dashdemux: do not override last known stream error

https://bugzilla.gnome.org/show_bug.cgi?id=736141